# grpc-rust-dart-demo

./: gen_protos.sh  readme.md
docker/: dc-dev.sh  docker-compose-dev.yml  docker-compose.yml  redis.Dockerfile  redis.conf
proto/: manageusers.proto  messages.proto  user.proto
protobuild/: Cargo.toml
protobuild/src/: main.rs
sy-client/: pubspec.yaml
sy-client/lib/src/: client.dart  manageusers.dart
sy-server/: .env  .gitignore  Cargo.toml  build.rs  example.env
sy-server/migrations/2020-07-23-031356_users/: down.sql  up.sql
sy-server/migrations/2020-09-14-235351_tasks_messages/: down.sql  up.sql
sy-server/proto/: route_guide.proto
sy-server/src/: data.rs  lib.rs  schema.rs
sy-server/src/manageusers/: manageusers.rs  mod.rs
sy-server/src/messages/: .mod.rs.swp  messages.rs  mod.rs
sy-server/src/models/: mod.rs
sy-server/src/models/group/: mod.rs
sy-server/src/models/message/: .mod.rs.swp  mod.rs
sy-server/src/models/user/: mod.rs
sy-server/src/user/: mod.rs
