[package]
name = "sy-server"
version = "0.1.0"
authors = ["Yuri Titov <yuri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
# note: need tls feature once needing encryption
tonic = "0.3"
tonic-build = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
# features may need later: tls, ipnetwork, bigdecimal
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json" ] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

tower = { version = "0.3.1" }
hyper = "0.13"

bcrypt = "0.8"

redis = "0.17"

[build-dependencies]
tonic-build = "0.3"

[[bin]]
name = "sy-server"
path = "bin/sy-server.rs"
